appId: com.example.example
---
- launchApp # For idempotence of sections

- tapOn: 'Input Test'

# Can paste
- tapOn:
    id: 'textInput'
- inputText: 'Foo'
- copyTextFrom:
    id: 'textInput'
- eraseText
- assertNotVisible: 'Foo'
- pasteText
- assertVisible: 'Foo'

# Can paste repeatedly
- eraseText
- inputText: 'bar'
- copyTextFrom:
    id: 'textInput'
- eraseText
- pasteText
- pasteText
- assertVisible: 'barbar'

# Copied Text cannot be overridden
- eraseText
- evalScript: ${maestro.copiedText = 'foo'}
- pasteText
- assertNotVisible: 'foo'
- assertVisible: 'bar'